--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,41 +1,49 @@
 {% extends 'base.html' %}
+{% load evaluador_privileges %}
 {% block content %}
 
-    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-        <h1 class="w3-xxxlarge w3-text-red"><b>Acceso</b></h1>
-        <hr style="width:50px;border:5px solid red" class="w3-round">
-        <p class="w3-col">
-        <h3>Ingresa con tu usuario y contraseña</h3>
-    </div>
+    {% if not user.is_authenticated %} <!-- Esto no es una solucion elegante, pero es lo mas rapido (? -->
+        <!-- Header -->
+        <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+            <h1 class="w3-xxxlarge w3-text-red"><b>Acceso</b></h1>
+            <hr style="width:50px;border:5px solid red" class="w3-round">
+            <p class="w3-col">
+            <h3>Ingresa con tu usuario y contraseña</h3>
+        </div>
 
-    <div class="w3-container">
-        <form method="post" action="{% url 'login' %}">
-            {% csrf_token %}
-            <table class="w3-table w3-responsive">
-                <tr>
-                    <td>Usuario</td>
-                    <td>{{ form.username }}</td>
-                </tr>
-                <tr>
-                    <td>Contraseña</td>
-                    <td>{{ form.password }}</td>
-                </tr>
-                <tr>
-                    <td><p class="w3-small"><a href="{% url 'password_reset' %}">He olvidado mi contraseña</a></p></td>
-                    <td class="w3-center"><input class="w3-button w3-red w3-round" type="submit" value="Entrar"/></td>
-                    <input type="hidden" name="next" value="{{ next }}"/>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td class="w3-small w3-text-red w3-center">{% if form.errors %} Usuario y/o contraseña no válida. {% endif %}</td>
-                </tr>
-            </table>
+        <!-- Formulario de login -->
+        <div class="w3-container">
+            <form method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <table class="w3-table w3-responsive">
+                    <tr>
+                        <td>Usuario</td>
+                        <td>{{ form.username }}</td>
+                    </tr>
+                    <tr>
+                        <td>Contraseña</td>
+                        <td>{{ form.password }}</td>
+                    </tr>
+                    <tr>
+                        <td><p class="w3-small"><a href="{% url 'password_reset' %}">He olvidado mi contraseña</a></p>
+                        </td>
+                        <td class="w3-center"><input class="w3-button w3-red w3-round" type="submit" value="Entrar"/>
+                        </td>
+                        <input type="hidden" name="next" value="{{ next }}"/>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td class="w3-small w3-text-red w3-center">{% if form.errors %} Usuario y/o contraseña no
+                            válida. {% endif %}</td>
+                    </tr>
+                </table>
 
-            <div class="w3-margin-top w3-margin-left">
+                <div class="w3-margin-top w3-margin-left">
 
-            </div>
-        </form>
-    </div>
+                </div>
+            </form>
+        </div>
+    {% endif %}
 
 
 
