Despliegue de mensajes de success y warning en vista de Cursos

--- a/templates/cursos/cursos_admin.html
+++ b/templates/cursos/cursos_admin.html
@@ -6,6 +6,12 @@
     <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
         <h1 class="w3-xxxlarge w3-text-red"><b>Cursos</b></h1>
         <hr style="width:50px;border:5px solid red" class="w3-round">
+        <!-- Mensajes de success -->
+        {% if messages %}
+            {% for message in messages %}
+                <p {% if message.tags %} class='{{ message.tags }}' {% endif %}>{{ message }}</p>
+            {% endfor %}
+        {% endif %}
         <p>
         <h3>Seleccione un curso</h3></p>
 
