--- a/templates/cursos/cursos_admin.html
+++ b/templates/cursos/cursos_admin.html
@@ -70,14 +70,10 @@
                             <td class="w3-light-gray" style="vertical-align:middle"> {{ curso.get_name }} </td>
                             <!-- Boton de detalles -->
                             <td class="w3-light-gray" style="vertical-align:middle">
-                                <form action="{% url 'cursos:curso_detalle' pk=curso.get_pk %}" method="post">
-                                    {% csrf_token %}
-                                    <input type="hidden" name="id" value="{{ curso.pk }}">
-                                    <button class="w3-button w3-red w3-small w3-round w3-center" type="submit">
-                                        <i class="fas fa-search"></i>
-                                        Ver
-                                    </button>
-                                </form>
+                                <a href="{% url 'cursos:curso_detalle' curso.get_pk %}" class="w3-button w3-red w3-small w3-round">
+                                    <i class="fas fa-search"></i>
+                                    Ver
+                                </a>
                             </td>
                             <!-- Boton eliminar -->
                             {% if user|is_admin %}
