--- a/templates/cursos/curso_detalle.html
+++ b/templates/cursos/curso_detalle.html
@@ -139,7 +139,7 @@
     </div>
 
     <!--Listado de alumnos-->
-    <div class="w3-container w3-padding">
+    <div class="w3-container w3-half w3-padding">
         <div class="w3-card-4">
             <table class="w3-table w3-responsive w3-red">
                 <tr>
@@ -149,7 +149,7 @@
                             <form action="{% url 'alumnos:upload_data' %}" method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <input type="hidden" name="id_curso" id="id_curso" value="{{ curso.pk }}">
-                                <input type="file" name="csv_file" id="csv_file" required="True" class="form-control">
+                                <input type="file" name="csv_file" id="csv_file" required="True" class="form-control w3-small">
                                 <button class="w3-button w3-small w3-light-gray w3-round" type="submit">
                                     <i class="fas fa-file-upload"></i>
                                     Subir
@@ -165,13 +165,11 @@
                 <th>Grupo</th>
                 <th>Nombre</th>
                 <th>Run</th>
-                <th>Correo</th>
                 {% for alumno in alumnos %}
                     <tr>
                         <td>{{ grupos|group_filter:alumno }}</td>
                         <td>{{ alumno }}</td>
                         <td>{{ alumno.run }}</td>
-                        <td>{{ alumno.correo }}</td>
                     </tr>
                 {% endfor %}
             </table>
@@ -189,9 +187,40 @@
                 <form class="w3-container" action="{% url 'cursos:add_evaluacion' pk=curso.get_pk %}" method="post">
                     {% csrf_token %}
                     <table class="w3-table">
-                        {{ add_evaluacion.as_table }}
+                        <tr>
+                            <td><b>Nombre:</b></td>
+                            <td>{{ add_evaluacion.nombre }}</td>
+                        </tr>
+                        <tr>
+                            <td><b>Tiempo min:</b></td>
+                            <td>{{ add_evaluacion.tiempo_min }}</td>
+                        </tr>
+                        <tr>
+                            <td><b>Tiempo máximo:</b></td>
+                            <td>{{ add_evaluacion.tiempo_max }}</td>
+                        </tr>
+                        <tr>
+                            <td><b>Rúbrica:</b></td>
+                            <td>{{ add_evaluacion.rubrica }}</td>
+                        </tr>
+                        <tr>
+                            <td><b>Fecha inicio:</b></td>
+                            <td>{{ add_evaluacion.fecha_inicio }}</td>
+                        </tr>
+                        <tr>
+                            <td><b>Fecha fin:</b></td>
+                            <td>{{ add_evaluacion.fecha_fin }}</td>
+                        </tr>
+                        <tr class="w3-hide">
+                            <td><b>Curso:</b></td>
+                            <td>{{ add_evaluacion.curso }}</td>
+                        </tr>
+                        <tr>
+                            <td><b>Estado:</b></td>
+                            <td>{{ add_evaluacion.estado }}</td>
+                        </tr>
                     </table>
-                    <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar
+                    <button class="w3-button w3-block w3-round w3-red w3-section w3-padding" type="submit">Agregar
                     </button>
                 </form>
             </div>
