--- a/templates/evaluadores/profile.html
+++ b/templates/evaluadores/profile.html
@@ -20,7 +20,21 @@
             <form action="{% url 'evaluadores:update_evaluador' %}" method="post">
                 {% csrf_token %}
                 <table class="w3-table">
-                    {{ form.as_table }}
+                    <tr class="w3-hide">
+                        {{ form.ID }}
+                    </tr>
+                    <tr>
+                        <td><b>Nombre:</b></td>
+                        <td>{{ form.nombre }}</td>
+                    </tr>
+                    <tr>
+                        <td><b>Apellido</b></td>
+                        <td>{{ form.apellido }}</td>
+                    </tr>
+                    <tr>
+                        <td><b>Correo:</b></td>
+                        <td>{{ form.correo }}</td>
+                    </tr>
                 </table>
                 <button class="w3-button w3-red w3-round w3-col w3-margin-top" type="submit">Confirmar cambios</button>
             </form>
