--- a/templates/evaluadores/evaluadores_admin.html
+++ b/templates/evaluadores/evaluadores_admin.html
@@ -26,10 +26,10 @@
             <table class="w3-table w3-card-4 w3-bordered w3-border-black">
                 <thead>
                 <tr>
-                    <th class="w3-red w3-center"> ID</th>
                     <th class="w3-red"> Nombre</th>
                     <th class="w3-red"> Email</th>
                     {% if user|is_admin %}
+                        <th class="w3-red"></th>
                         <th class="w3-red"></th>
                     {% endif %}
                 </tr>
@@ -40,11 +40,18 @@
                 </script>
                 <tbody id='evaluadores'>
                 {% for evaluador in evaluadores_list %}
-                    <tr class='w3-light-gray {% if user|is_admin %}opcion{% endif %}' id='{{ evaluador.get_pk }}'>
-                        <td class='w3-center'>{{ evaluador.get_pk }} </td>
+                    <tr class='w3-light-gray ' id="fila-{{evaluador.pk}}" >
+                        
                         <td>{{ evaluador }}</td>
                         <td> {{ evaluador.get_email }} </td>
                         {% if user|is_admin %}
+                            <td class="w3-light-gray" style="vertical-align:middle">
+                                <a id='{{evaluador.pk}}' class="w3-button w3-red w3-small w3-round">
+                                    <i class="fas fa-edit"></i>
+                                    Editar
+                                </a>
+                            </td>
+
                             <td class="w3-light-gray w3-right-align">
                                 <form action="{% url 'evaluadores:delete_evaluador' %}" method="post">
                                     {% csrf_token %}
@@ -156,11 +163,11 @@
                     return false;
                 });
                 for (i = 0; i < evaluadoresJs.length; i++) {
-                    document.getElementById(evaluadoresJs[i][0]).style.display = 'none';
+                    document.getElementById('fila-'+evaluadoresJs[i][0]).style.display = 'none';
 
                 }
                 for (i = 0; i < filtered.length; i++) {
-                    document.getElementById(filtered[i][0]).style.display = '';
+                    document.getElementById('fila-'+filtered[i][0]).style.display = '';
                 }
             }
 
