se agrega la opción de evaluar solo si la evaluación está abierta. El botón conecta con la vista correspondiente. Falta actualizar el html

--- a/templates/cursos/cursos_admin.html
+++ b/templates/cursos/cursos_admin.html
@@ -70,7 +70,7 @@
                             <td class="w3-light-gray" style="vertical-align:middle"> {{ curso.get_name }} </td>
                             <!-- Boton de detalles -->
                             <td class="w3-light-gray" style="vertical-align:middle">
-                                <a href="{% url 'cursos:curso_detalle' curso.get_pk %}" class="w3-button w3-red w3-small w3-round">
+                                <a href="{% url 'cursos:curso_detalle' curso.get_pk %}" class="w3-button w3-red w3-round">
                                     <i class="fas fa-search"></i>
                                     Ver
                                 </a>
