--- a/templates/evaluacion/evaluacion_detalle.html
+++ b/templates/evaluacion/evaluacion_detalle.html
@@ -26,6 +26,8 @@
                 <th class="w3-red"> Fecha fin</th>
 
                 <th class="w3-red"> Duración esperada</th>
+
+                <th class="w3-red"></th>
                 {% if user|is_admin %}
                     <th class="w3-red"></th>
                 {% endif %}
@@ -37,6 +39,12 @@
                 <td class="w3-light-gray" style="vertical-align:middle"> {{ evaluacion.get_startdate }} </td>
                 <td class="w3-light-gray" style="vertical-align:middle"> {{ evaluacion.get_enddate }} </td>
                 <td class="w3-light-gray" style="vertical-align:middle"> {{ evaluacion.get_rank }} </td>
+            {% if evaluacion.is_active%}
+                <td class="w3-light-gray">
+                <a href="{% url 'evaluaciones:evaluar' evaluacion.get_pk %}" class="w3-button w3-red w3-round">
+                    <strong>Evaluar</strong></a>
+                </td>
+            {% endif %}
                 {% if user|is_admin %}
                     <td class="w3-light-gray w3-right-align">
                         <form action="{% url 'evaluaciones:delete_evaluacion' %}" method="post">
